@@ -225,7 +225,7 @@ BEGIN
     LTEXT           "Base Material",IDC_STATIC,7,26,44,8
     LTEXT           "Skirt Material",IDC_STATIC,7,48,42,8
     LTEXT           "Ring Material",IDC_STATIC,7,69,42,8
-    COMBOBOX        IDC_MATERIAL_COMBO, 7,11,111,60,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_MATERIAL_COMBO,7,11,111,60,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     COMBOBOX        IDC_MATERIAL_COMBO2,7,34,111,60,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     COMBOBOX        IDC_MATERIAL_COMBO3,7,56,111,60,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     COMBOBOX        IDC_MATERIAL_COMBO4,7,77,111,60,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
@@ -2747,25 +2747,45 @@ END
 //
 
 IDR_VPINBALL            REGISTRY                "res\\vpinball.rgs"
+
 IDR_SURFACE             REGISTRY                "res\\surface.rgs"
+
 IDR_DRAG_POINT          REGISTRY                "res\\dragpoint.rgs"
+
 IDR_FLIPPER             REGISTRY                "res\\flipper.rgs"
+
 IDR_TIMER               REGISTRY                "res\\timer.rgs"
+
 IDR_PLUNGER             REGISTRY                "res\\plunger.rgs"
+
 IDR_TEXTBOX             REGISTRY                "res\\textbox.rgs"
+
 IDR_BUMPER              REGISTRY                "res\\bumper.rgs"
+
 IDR_PI_EVENT_HANDLER    REGISTRY                "res\\pieventhandler.rgs"
+
 IDR_TRIGGER             REGISTRY                "res\\trigger.rgs"
+
 IDR_LIGHT               REGISTRY                "res\\light.rgs"
+
 IDR_KICKER              REGISTRY                "res\\kicker.rgs"
+
 IDR_GATE                REGISTRY                "res\\gate.rgs"
+
 IDR_SPINNER             REGISTRY                "res\\spinner.rgs"
+
 IDR_RAMP                REGISTRY                "res\\ramp.rgs"
+
 IDR_DISP_REEL           REGISTRY                "res\\dispreel.rgs"
+
 IDR_LIGHT_SEQ           REGISTRY                "res\\lightseq.rgs"
+
 IDR_PRIMITIVE           REGISTRY                "res\\primitive.rgs"
+
 IDR_RUBBER              REGISTRY                "res\\rubber.rgs"
+
 IDR_HITTARGET           REGISTRY                "res\\hittarget.rgs"
+
 
 /////////////////////////////////////////////////////////////////////////////
 //
@@ -2915,12 +2935,12 @@ IDR_SURFACEMENU MENU
 BEGIN
     POPUP "WallMenu"
     BEGIN
+        MENUITEM "Add &Point",                  ID_WALLMENU_ADDPOINT
         MENUITEM "Flip &X",                     ID_WALLMENU_MIRROR
         MENUITEM "Flip &Y",                     ID_WALLMENU_FLIP
         MENUITEM "&Rotate",                     ID_WALLMENU_ROTATE
         MENUITEM "&Scale",                      ID_WALLMENU_SCALE
         MENUITEM "&Translate",                  ID_WALLMENU_TRANSLATE
-        MENUITEM "Add &Point",                  ID_WALLMENU_ADDPOINT
     END
 END
 
@@ -2985,20 +3005,35 @@ END
 //
 
 IDB_TOOLBAR             BITMAP                  "res\\toolbar.bmp"
+
 IDB_BALL                BITMAP                  "res\\ball.bmp"
+
 IDB_ENV                 BITMAP                  "res\\envmap.bmp"
+
 IDB_LOGO                BITMAP                  "res\\logo.bmp"
+
 IDB_CHEVRON             BITMAP                  "res\\chevron.bmp"
+
 IDB_BUMPERCAP           BITMAP                  "res\\bumperCap.bmp"
+
 IDB_KICKER_HOLE_WOOD    BITMAP                  "res\\kickerHoleWood.bmp"
+
 IDB_KICKER_CUP          BITMAP                  "res\\kickerCup.bmp"
+
 IDB_AO_DITHER           BITMAP                  "res\\AOdither.bmp"
+
 IDB_KICKER_WILLIAMS     BITMAP                  "res\\kickerWilliams.bmp"
+
 IDB_KICKER_GOTTLIEB     BITMAP                  "res\\kickerGottlieb.bmp"
+
 IDB_KICKER_T1           BITMAP                  "res\\kickerT1.bmp"
+
 IDB_BUMPER_BASE         BITMAP                  "res\\bumperBase.bmp"
+
 IDB_BUMPER_RING         BITMAP                  "res\\bumperRing.bmp"
+
 IDB_BUMPER_SKIRT        BITMAP                  "res\\bumperSkirt.bmp"
+
 
 /////////////////////////////////////////////////////////////////////////////
 //
@@ -3070,11 +3105,17 @@ END
 // Icon with lowest ID value placed first to ensure application icon
 // remains consistent on all systems.
 IDI_VPINBALL            ICON                    "res\\vpinball.ico"
+
 IDI_SCRIPT              ICON                    "res\\script.ico"
+
 IDI_TABLE               ICON                    "res\\table.ico"
+
 IDI_PLAY                ICON                    "res\\play.ico"
+
 IDI_PAUSE               ICON                    "res\\pause.ico"
+
 IDI_STEP                ICON                    "res\\step.ico"
+
 
 /////////////////////////////////////////////////////////////////////////////
 //
@@ -3082,25 +3123,45 @@ IDI_STEP                ICON                    "res\\step.ico"
 //
 
 IDC_MAGNIFY             CURSOR                  "res\\magnify.cur"
+
 IDC_LIGHT               CURSOR                  "res\\light.cur"
+
 IDC_WALL                CURSOR                  "res\\wall.cur"
+
 IDC_FLIPPER             CURSOR                  "res\\flipper.cur"
+
 IDC_TRIGGER             CURSOR                  "res\\trigger.cur"
+
 IDC_GATE                CURSOR                  "res\\gate.cur"
+
 IDC_TIMER               CURSOR                  "res\\timer.cur"
+
 IDC_PLUNGER             CURSOR                  "res\\plunger.cur"
+
 IDC_TEXTBOX             CURSOR                  "res\\textbox.cur"
+
 IDC_BUMPER              CURSOR                  "res\\bumper.cur"
+
 IDC_KICKER              CURSOR                  "res\\kicker.cur"
+
 IDC_TARGET              CURSOR                  "res\\target.cur"
+
 IDC_DECAL               CURSOR                  "res\\decal.cur"
+
 IDC_SPINNER             CURSOR                  "res\\spinner.cur"
+
 IDC_RAMP                CURSOR                  "res\\ramp.cur"
+
 IDC_DISPREEL            CURSOR                  "res\\dispreel.cur"
+
 IDC_LIGHTSEQ            CURSOR                  "res\\lightseq.cur"
+
 IDC_PRIMITIVE           CURSOR                  "res\\primitive.cur"
+
 IDC_FLASHER             CURSOR                  "res\\flasher.cur"
+
 IDC_RUBBER              CURSOR                  "res\\rubber.cur"
+
 
 /////////////////////////////////////////////////////////////////////////////
 //
@@ -3108,7 +3169,9 @@ IDC_RUBBER              CURSOR                  "res\\rubber.cur"
 //
 
 IDR_BLANK_TABLE         TABLE                   "res\\blankTable.vpx"
+
 IDR_EXAMPLE_TABLE       TABLE                   "res\\exampleTable.vpx"
+
 
 /////////////////////////////////////////////////////////////////////////////
 //
@@ -3145,54 +3208,54 @@ END
 // AFX_DIALOG_LAYOUT
 //
 
-IDD_SOUNDDIALOG AFX_DIALOG_LAYOUT 
+IDD_SOUNDDIALOG AFX_DIALOG_LAYOUT
 BEGIN
-    0x0000
+    0
 END
 
-IDD_AUDIO_OPTIONS AFX_DIALOG_LAYOUT 
+IDD_AUDIO_OPTIONS AFX_DIALOG_LAYOUT
 BEGIN
-    0x0000
+    0
 END
 
-IDD_SOUND_POSITION_DIALOG AFX_DIALOG_LAYOUT 
+IDD_SOUND_POSITION_DIALOG AFX_DIALOG_LAYOUT
 BEGIN
-    0x0000
+    0
 END
 
-IDD_PHYSICS_OPTIONS AFX_DIALOG_LAYOUT 
+IDD_PHYSICS_OPTIONS AFX_DIALOG_LAYOUT
 BEGIN
-    0x0000
+    0
 END
 
-IDD_PROPWALL_VISUALS AFX_DIALOG_LAYOUT 
+IDD_PROPWALL_VISUALS AFX_DIALOG_LAYOUT
 BEGIN
-    0x0000
+    0
 END
 
-IDD_PROPHITTARGET_VISUALS AFX_DIALOG_LAYOUT 
+IDD_PROPHITTARGET_VISUALS AFX_DIALOG_LAYOUT
 BEGIN
-    0x0000
+    0
 END
 
-IDD_PROPPRIMITIVE_VISUALS AFX_DIALOG_LAYOUT 
+IDD_PROPPRIMITIVE_VISUALS AFX_DIALOG_LAYOUT
 BEGIN
-    0x0000
+    0
 END
 
-IDD_PROPBACKGLASS_VISUALS AFX_DIALOG_LAYOUT 
+IDD_PROPBACKGLASS_VISUALS AFX_DIALOG_LAYOUT
 BEGIN
-    0x0000
+    0
 END
 
-IDD_PROPBUMPER_VISUALS AFX_DIALOG_LAYOUT 
+IDD_PROPBUMPER_VISUALS AFX_DIALOG_LAYOUT
 BEGIN
-    0x0000
+    0
 END
 
-IDD_EDITOR_OPTIONS AFX_DIALOG_LAYOUT 
+IDD_EDITOR_OPTIONS AFX_DIALOG_LAYOUT
 BEGIN
-    0x0000
+    0
 END
 
 
